--- a/index.html
+++ b/index.html
@@ -273,12 +273,17 @@ switch (codigoCoche)
         }
 
         var mes = prompt('ingrese numero del mes: ')
-        d(mes)
+        d(mes);
 
 
 </Script>
 </head>
 <body>
-    
+    <!-- DIV CONTENDER -->
+      <div class="container">
+          <div class="exit">
+              <p>hola</p>
+          </div>
+      </div>
 </body>
 </html>
