cambio de texto

--- a/index.html
+++ b/index.html
@@ -281,8 +281,8 @@ switch (codigoCoche)
 <body>
     <!-- DIV CONTENDER -->
       <div class="container">
-          <div class="exit">
-              <p>hola</p>
+          <div class="row">
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat natus eius sunt qui assumenda doloribus. Repudiandae, harum eius et optio libero pariatur ab, ex excepturi ipsa rerum nostrum provident aliquam?</p>
           </div>
       </div>
 </body>
